--- a/index.html
+++ b/index.html
@@ -566,6 +566,7 @@
       <input type="file" id="importFile" accept=".kml" style="display:none;" onchange="handleKMLImport(event)">
       <button class="toolbar-button" onclick="exportData()">💾 Export CSV</button>
       <button class="toolbar-button" onclick="saveGullyData()">💾 Backup</button>
+      <button class="toolbar-button" onclick="showLayerControl()">🗺️ Layers</button>
     </div>
 
     <div class="button-group admin-only">
@@ -2278,6 +2279,92 @@ function createTooltip() {
     document.body.appendChild(tooltip);
     return tooltip;
 }
+
+// 1. Backup function
+function saveGullyData() {
+  if (!auth.currentUser) {
+    alert('Please log in to back up data');
+    return;
+  }
+  const layersToBackup = ['gullies', 'signage', 'playgrounds', 'parks', 'walkways', 'lining'];
+  const backup = {};
+  let completed = 0;
+  layersToBackup.forEach(layer => {
+    db.ref(layer).once('value').then(snapshot => {
+      backup[layer] = snapshot.val() || {};
+      completed++;
+      if (completed === layersToBackup.length) {
+        const blob = new Blob([JSON.stringify(backup, null, 2)], { type: 'application/json' });
+        const link = document.createElement('a');
+        link.href = URL.createObjectURL(blob);
+        link.download = `gully_backup_${new Date().toISOString().split('T')[0]}.json`;
+        document.body.appendChild(link);
+        link.click();
+        document.body.removeChild(link);
+        alert('Backup downloaded successfully!');
+      }
+    }).catch(error => {
+      alert('Error backing up ' + layer + ': ' + error.message);
+    });
+  });
+}
+
+// 2. User management modal
+function showUserManagement() {
+  if (!auth.currentUser || currentRole !== 'admin') {
+    alert('Only administrators can view users');
+    return;
+  }
+  db.ref('users').once('value').then(snapshot => {
+    const users = snapshot.val() || {};
+    let html = `<div style="max-height:60vh;overflow:auto;">
+      <h3>User Management</h3>
+      <table style='width:100%;border-collapse:collapse;'>
+        <tr><th style='border-bottom:1px solid #ccc;'>Name</th><th style='border-bottom:1px solid #ccc;'>Email</th><th style='border-bottom:1px solid #ccc;'>Role</th></tr>`;
+    Object.values(users).forEach(user => {
+      html += `<tr><td>${user.name || ''}</td><td>${user.email || ''}</td><td>${user.role || ''}</td></tr>`;
+    });
+    html += '</table>';
+    html += `<div style='text-align:right;margin-top:10px;'><button onclick='this.parentElement.parentElement.remove()' style='padding:6px 12px;border-radius:4px;'>Close</button></div></div>`;
+    const modal = document.createElement('div');
+    modal.style.cssText = 'position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);background:white;padding:20px;border-radius:8px;box-shadow:0 2px 10px rgba(0,0,0,0.2);z-index:2001;';
+    modal.innerHTML = html;
+    document.body.appendChild(modal);
+  });
+}
+
+// 4. Layer control modal for toggling layers
+function showLayerControl() {
+  if (!window.dataLayers) return;
+  const modal = document.createElement('div');
+  modal.style.cssText = 'position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);background:white;padding:20px;border-radius:8px;box-shadow:0 2px 10px rgba(0,0,0,0.2);z-index:2002;min-width:250px;';
+  let html = `<h3>Layer Visibility</h3><form id='layerToggleForm'>`;
+  Object.keys(window.dataLayers).forEach(layer => {
+    html += `<div style='margin-bottom:8px;'><label><input type='checkbox' data-layer='${layer}' checked> ${layer.charAt(0).toUpperCase() + layer.slice(1)}</label></div>`;
+  });
+  html += `</form><div style='text-align:right;margin-top:10px;'><button onclick='this.parentElement.parentElement.remove()' style='padding:6px 12px;border-radius:4px;'>Close</button></div>`;
+  modal.innerHTML = html;
+  document.body.appendChild(modal);
+  // Add event listeners
+  setTimeout(() => {
+    document.querySelectorAll('#layerToggleForm input[type="checkbox"]').forEach(cb => {
+      cb.addEventListener('change', function() {
+        const layer = this.getAttribute('data-layer');
+        if (window.dataLayers[layer]) {
+          if (this.checked) {
+            window.map.addLayer(window.dataLayers[layer]);
+          } else {
+            window.map.removeLayer(window.dataLayers[layer]);
+          }
+        }
+      });
+    });
+  }, 100);
+}
+
+// Add a button to open the layer control modal in the toolbar
+// Find the toolbar-content div and add:
+// <button class="toolbar-button" onclick="showLayerControl()">🗺️ Layers</button>
 </script>
 </body>
 </html>
